ci: make env vars more consistent, adapt master workflow

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -48,14 +48,13 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.draft == false
     env:
-      A32NX_PRODUCTION_BUILD: 1
-      A32NX_INSTRUMENTS_BUILD_WORKERS: 2
+      FBW_PRODUCTION_BUILD: 1
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
       - name: Create .env file
         run: |
-          echo A32NX_PRODUCTION_BUILD=1 >> fbw-a32nx/.env
+          echo FBW_PRODUCTION_BUILD=1 >> fbw-a32nx/.env
           echo FBW_TYPECHECK=1 >> fbw-a32nx/.env
           echo CLIENT_ID=\"${{ secrets.NAVIGRAPH_CLIENT_ID_A380X }}\" >> fbw-a32nx/.env
           echo CLIENT_SECRET=\"${{ secrets.NAVIGRAPH_CLIENT_SECRET_A380X }}\" >> fbw-a32nx/.env
@@ -90,15 +89,14 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.pull_request.draft == false
     env:
-      A32NX_PRODUCTION_BUILD: 1
-      A32NX_INSTRUMENTS_BUILD_WORKERS: 2
+      FBW_PRODUCTION_BUILD: 1
     steps:
       - name: Checkout source
         uses: actions/checkout@v4
       - name: Create .env file
         # We do not set FBW_TYPECHECK=1 here, as there are still things to fix in the A380 instruments
         run: |
-          echo A32NX_PRODUCTION_BUILD=1 >> fbw-a380x/.env
+          echo FBW_PRODUCTION_BUILD=1 >> fbw-a380x/.env
           echo CLIENT_ID=\"${{ secrets.NAVIGRAPH_CLIENT_ID }}\" >> fbw-a380x/.env
           echo CLIENT_SECRET=\"${{ secrets.NAVIGRAPH_CLIENT_SECRET }}\" >> fbw-a380x/.env
           echo CHARTFOX_SECRET=\"${{ secrets.CHARTFOX_SECRET }}\" >> fbw-a380x/.env
