--- a/.github/workflows/ingamepanels-checklist-fix.yml
+++ b/.github/workflows/ingamepanels-checklist-fix.yml
@@ -18,8 +18,7 @@ jobs:
     name: 'Build InGamePanels Checklist Fix'
     runs-on: ubuntu-latest
     env:
-      A32NX_PRODUCTION_BUILD: 1
-      A32NX_INSTRUMENTS_BUILD_WORKERS: 2
+      FBW_PRODUCTION_BUILD: 1
       MASTER_ZIP_NAME: ingamepanels-checklist-fix-master.zip
       BUILD_DIR_NAME: master
     steps:
@@ -29,7 +28,7 @@ jobs:
         run: echo "BUILT_DATE_TIME=$(date -u -Iseconds)" >> $GITHUB_ENV
       - name: Create .env file
         run: |
-          echo A32NX_PRODUCTION_BUILD=1 >> .env
+          echo FBW_PRODUCTION_BUILD=1 >> .env
           echo CLIENT_ID=${{ secrets.NAVIGRAPH_CLIENT_ID }} >> .env
           echo CLIENT_SECRET=${{ secrets.NAVIGRAPH_CLIENT_SECRET }} >> .env
           echo CHARTFOX_SECRET=${{ secrets.CHARTFOX_SECRET }} >> .env
