GSX-Integration-for-FBW-Chocks-and-Cones

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/GSX.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/GSX.cfg
@@ -1,6 +1,6 @@
 [aircraft]
 icaotype = A20N
-parkingbrakestest = (L:A32NX_PARK_BRAKE_LEVER_POS,number)
+parkingbrakestest = (L:A32NX_PARK_BRAKE_LEVER_POS,number) (L:A32NX_GND_EQP_IS_VISIBLE, number) ||
 nosegear = 8.26
 refueling = 0
 battery = 1
@@ -8,7 +8,7 @@ pushbackraise = 1
 pushbackdummyevent = 0
 pushbackcheckengines = 0
 iscargo = 0
-trafficcones = 1
+trafficcones = 0
 preferredexit =  0
 wingrootpos = 2.36 -1.89 0.85
 wingtippos = 15.70 -7.41 1.84
