feat(tooltips): Implement @2hwk's change to support additional loading tips
Co-authored-by: 2hwk <15316958+2hwk@users.noreply.github.com>

--- a/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/aircraft.cfg
+++ b/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/aircraft.cfg
@@ -65,6 +65,20 @@ Tips12 = TT:A32NX.LOADING.TIPS.A320NEO_013
 Tips13 = TT:A32NX.LOADING.TIPS.A320NEO_014
 Tips14 = TT:A32NX.LOADING.TIPS.A320NEO_015
 Tips15 = TT:A32NX.LOADING.TIPS.A320NEO_016
+Tips16 = TT:A32NX.LOADING.TIPS.A320NEO_017
+Tips17 = TT:A32NX.LOADING.TIPS.A320NEO_018
+Tips18 = TT:A32NX.LOADING.TIPS.A320NEO_019
+Tips19 = TT:A32NX.LOADING.TIPS.A320NEO_020
+Tips20 = TT:A32NX.LOADING.TIPS.A320NEO_021
+Tips21 = TT:A32NX.LOADING.TIPS.A320NEO_022
+Tips22 = TT:A32NX.LOADING.TIPS.A320NEO_023
+Tips23 = TT:A32NX.LOADING.TIPS.A320NEO_024
+Tips24 = TT:A32NX.LOADING.TIPS.A320NEO_025
+Tips25 = TT:A32NX.LOADING.TIPS.A320NEO_026
+Tips26 = TT:A32NX.LOADING.TIPS.A320NEO_027
+Tips27 = TT:A32NX.LOADING.TIPS.A320NEO_028
+Tips28 = TT:A32NX.LOADING.TIPS.A320NEO_029
+Tips29 = TT:A32NX.LOADING.TIPS.A320NEO_030
 
 [STALL PROTECTION]
 stall_protection = 1 ; Alpha Protection
