Added systems-host from A32NX to A380X

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -156,6 +156,14 @@ htmlgauge02=WasmInstrument/WasmInstrument.html?wasm_module=fadec.wasm&wasm_gauge
 htmlgauge03=WasmInstrument/WasmInstrument.html?wasm_module=extra-backend-a380x.wasm&wasm_gauge=Gauge_Extra_Backend,0,0,1,1
 
 [VCockpit20]
+size_mm = 0,0
+pixel_size = 0,0
+texture = NO_TEXTURE
+background_color = 0,0,0
+
+htmlgauge00 = A380X/SystemsHost/systems-host.html,0,0,1,1
+
+[VCockpit21]
 size_mm=0,0
 pixel_size=0,0
 texture=NO_TEXTURE
