panel.cfg changes

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -15,18 +15,21 @@ Night=233,166,134
 Luminous=201,64,64
 
 [VCockpit01]
-size_mm=768,1024
-pixel_size=768,1024
-texture=$SCREEN_DU_MFDL
+size_mm=1536,1024
+pixel_size=1536,1024
+texture=$SCREEN_DU_MFD
 
-htmlgauge00=A380X/MFD/mfd.html?duID=2, 0,0,768,1024
+htmlgauge00=A380X/MFD/mfd.html?duID=2, 0,0,1536,1024
+
+# To enable both MFD screens without fms-v2 rpc sync, we map one texture across both screens,
+# and render both MFD screens within one texture/instrument
 
 [VCockpit02]
 size_mm=768,1024
 pixel_size=768,1024
 texture=$SCREEN_DU_MFDR
 
-# We don't load MFD2 for now, while waiting for fms-v2 rpc support
+# No separate MFDR, see above
 
 [VCockpit03]
 size_mm=768,1024
