--- a/package.json
+++ b/package.json
@@ -113,13 +113,15 @@
     "@types/react-dom": "~17.0.8",
     "@types/react-router-dom": "~5.1.7",
     "@types/semver": "^7.3.13",
-    "@typescript-eslint/eslint-plugin": "~6.7.4",
-    "@typescript-eslint/parser": "~6.7.4",
+    "@typescript-eslint/eslint-plugin": "~6.19.1",
+    "@typescript-eslint/parser": "~6.19.1",
     "@vitejs/plugin-react": "^1.2.0",
     "autoprefixer": "^10.4.2",
     "dotenv": "^8.2.0",
     "esbuild": "^0.19.4",
-    "eslint": "^7.21.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.4.2",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -133,7 +135,7 @@
     "postcss": "^8.4.5",
     "postcss-color-functional-notation": "^4.2.2",
     "postcss-inset": "^1.0.0",
-    "prettier": "2.1.2",
+    "prettier": "^3.2.4",
     "react-msfs": "^0.1.4",
     "redux-devtools-extension": "^2.13.8",
     "rollup": "^2.66.0",
