feat(flt_model): Adjust some 380 flight model geometry/contact point/max speed (#8385)

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -89,11 +89,11 @@ max_castering_angle = 1.309 ; Defines the maximum angle a free castering wheel c
 ;14 The airspeed limit for gears retraction, in kias.
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
-point.0 = 1, 100.0, 0, -15.8, 800, 0, 2.34, 75, 1.8, 1.7, 0.2, 17, 15, 0, 0, 0, 2
-point.1 = 1, -11.13, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
-point.2 = 1, -11.13, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.3 = 1, 2.36, -20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.4 = 1, 2.36, 20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.0 = 1, 100.0, 0, -15.8, 800, 0, 2.34, 70, 1.8, 1.7, 0.2, 17, 15, 0, 0, 0, 2
+point.1 = 1, -6, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
+point.2 = 1, -6, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.3 = 1, 6, -20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.4 = 1, 6, 20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
@@ -406,31 +406,31 @@ wing_area = 9096.0 ; Wing area S (SQUARE FEET)
 wing_span = 261.65 ; Wing span b (FEET)
 wing_root_chord = 57.97 ; Wing root chord croot (FEET)
 wing_camber = 1 ; (DEGREES) (Unkown - estimated value)
-wing_thickness_ratio = 0.08 ; Local thickness is local_chord(x)*wing_thickness_ratio, x = lateral coord
-wing_dihedral = 5.6 ; Dihedral angle Lambda (DEGREES)
+wing_thickness_ratio = 0.05 ; Local thickness is local_chord(x)*wing_thickness_ratio, x = lateral coord
+wing_dihedral = 6.5 ; Dihedral angle Lambda (DEGREES)
 wing_incidence = 2 ; Wing incidence (DEGREES) (unknown)
 wing_twist = -5.5 ; Wing twist epsilon (DEGREES)
 oswald_efficiency_factor = 0.70 ; Wing Oswald efficiency factor e (non dimensional)
 wing_winglets_flag = 0 ; Has winglets true/false (MSFS doesn't use this parameter)
-wing_sweep = 33.5 ; Wing sweep (DEGREES)
+wing_sweep = 35 ; Wing sweep (DEGREES)
 ;wing_pos_apex_lon = 0 ; Longitudinal (z) position of wing apex w.r.t reference datum (FEET) (not used)
-wing_pos_apex_vert = 3.26 ; Vertical (y) position of wing apex w.r.t reference datum (FEET) (estimated from mesh drawing)
-htail_area = 1603 ; Horizontal tail area (SQUARE FEET)
+wing_pos_apex_vert = -2 ; Vertical (y) position of wing apex w.r.t reference datum (FEET) (estimated from mesh drawing)
+htail_area = 2300 ; Horizontal tail area (SQUARE FEET) original 1603
 htail_span = 99.64 ; Horizontal tail span (FEET)
-htail_pos_lon = -95.6 ; Longitudinal (z) position of horizontal tail  w.r.t reference datum (FEET) -76.6
+htail_pos_lon = -105 ; Longitudinal (z) position of horizontal tail  w.r.t reference datum (FEET) -76.6
 htail_pos_vert = 14.8 ; Vertical (y) position of horizontal tail  w.r.t reference datum (FEET) 13.8 11.35
 htail_incidence = 0 ; Horizontal tail incidence (DEGREES)
-htail_sweep = 30 ; Horizontal tail sweep angle (DEGREES)
-htail_thickness_ratio = 0.04 ; Local thickness is local_chord(x)*htail_thickness_ratio, x = lateral coord
-vtail_area = 2006.4 ; Vertical tail area (SQUARE FEET)
-vtail_span = 47.87 ; Vertical tail span (FEET)
+htail_sweep = 38 ; Horizontal tail sweep angle (DEGREES)
+htail_thickness_ratio = 0.02 ; Local thickness is local_chord(x)*htail_thickness_ratio, x = lateral coord
+vtail_area = 2800.4 ; Vertical tail area (SQUARE FEET)
+vtail_span = 40.87 ; Vertical tail span (FEET)
 vtail_sweep = 45 ; Vertical tail sweep angle (DEGREES)
-vtail_pos_lon = -61.5 ; Longitudinal (z) position of vertical tail  w.r.t reference datum (FEET)
-vtail_pos_vert = 20.3 ; Vertical (y) position of vertical tail  w.r.t reference datum (FEET)
-vtail_thickness_ratio = 0.04 ; Local thickness is local_chord(x)*vtail_thickness_ratio, x = lateral coord
+vtail_pos_lon = -90.5 ; Longitudinal (z) position of vertical tail  w.r.t reference datum (FEET)
+vtail_pos_vert = 37 ; Vertical (y) position of vertical tail  w.r.t reference datum (FEET)
+vtail_thickness_ratio = 0.02 ; Local thickness is local_chord(x)*vtail_thickness_ratio, x = lateral coord
 fuselage_length = 230.97 ; Nose to tail (FEET)
-fuselage_diameter = 27.8; (is 23.43 horizontally, but 27.6 to 28.1 vertically)
-fuselage_center_pos = -0.1, 0, 7.1
+fuselage_diameter = 25; (is 23.43 horizontally, but 27.6 to 28.1 vertically)
+fuselage_center_pos = 10, 0, 7.1
 elevator_area = 593 ; Elevator area (SQUARE FEET)
 aileron_area = 258 ; Elevator area (SQUARE FEET)
 rudder_area = 416.6 ; Elevator area (SQUARE FEET)
@@ -513,7 +513,7 @@ yaw_moment_delta_rudder_trim_scalar = 0.753 ; Change in yaw moment due to rudder
 compute_aero_center = 0
 aero_center_lift = 5.3 ; Init to center
 lift_coef_aoa_table = -3.15:0, 0:0.138, 0.139:1.32, 0.2:1.48, 0.26:1.76, 0.29:1.750, 0.32:1.60, 0.5:1.50, 3.15:0
-lift_coef_ground_effect_mach_table = 0.0:1.178, 0.15:1.178, 0.19:1.178, 0.20:1.176, 0.22:1.173, 0.25:1.17, 0.27:1.1675, 0.30:1.164, 0.35:1.159, 1.0:1
+lift_coef_ground_effect_mach_table = 0.1171:0.7211,0.1411:0.7111,0.1761:0.6811,0.2171:0.6631,0.3171:0.647135503,0.4171:0.637668047,0.5171:0.63293432,0.6171:0.628200592,0.7171:0.625833728,0.8171:0.623466864,1:1 ; changed from 0.0:1.178, 0.15:1.178, 0.19:1.178, 0.20:1.176, 0.22:1.173, 0.25:1.17, 0.27:1.1675, 0.30:1.164, 0.35:1.159, 1.0:1
 lift_coef_mach_table = 0:1
 lift_coef_delta_elevator_mach_table = 0:0
 lift_coef_daoa_mach_table = 0:0
@@ -605,8 +605,8 @@ flaps_up_stall_speed = 171 ; Knots True (KTAS)
 cruise_speed = 487.5 ; Knots True (KTAS)
 cruise_mach = 0.85
 crossover_speed = 320 ; Knots Indicated (KIAS)
-max_mach = 0.89 ; MMO
-max_indicated_speed = 340 ; Red line (KIAS)
+max_mach = 0.97 ; MMO
+max_indicated_speed = 390 ; Red line (KIAS)
 max_flaps_extended = 263
 normal_operating_speed = 300
 airspeed_indicator_max = 562.5
