--- a/.github/workflows/fms-v2.yml
+++ b/.github/workflows/fms-v2.yml
@@ -32,10 +32,11 @@ jobs:
           ./scripts/dev-env/run.sh ./scripts/setup.sh
           ./scripts/dev-env/run.sh ./scripts/build_a32nx.sh --no-tty -j 4
           rm -rf fbw-a32nx/src
+          docker system prune -af
       - name: Build ZIP files
         run: |
           df -h
-          ./scripts/dev-env/run.sh node ./scripts/fragment_a32nx.js
+          node ./scripts/fragment_a32nx.js
       - name: Upload to CloudFlare CDN
         env:
           CLOUDFLARE_BUCKET_PASSWORD: ${{ secrets.CLOUDFLARE_BUCKET_PASSWORD }}
