Moved AircraftVersionChecker to fbw-common/src/systems/shared

--- a/fbw-a32nx/src/systems/extras-host/tsconfig.json
+++ b/fbw-a32nx/src/systems/extras-host/tsconfig.json
@@ -14,6 +14,7 @@
       "@simbridge/*": ["./simbridge-client/src/*"],
       "@shared/*": ["./shared/src/*"],
       "@tcas/*": ["./tcas/src/*"],
+      "@fbw-common/shared/*": ["../../../fbw-common/src/systems/shared/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
       "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"]
     }
