Changelog update in cfg file

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -4,6 +4,9 @@
 ; A380 MSN 225 - WV03 A380-842
 ; 07 Mar 2023 Fuel System Update
 
+; 10 Feb 2024 Masses (tanks/cargo) shift 5m fwd to match visual model
+; Contact point of wing gear slightgly set higher so it gets less plane weight (shift weight on nose)
+
 [VERSION]
 major = 1
 minor = 0
