--- a/fbw-common/src/systems/instruments/src/EFB/.eslintrc
+++ b/fbw-common/src/systems/instruments/src/EFB/.eslintrc
@@ -2,5 +2,9 @@
 {
   "ignorePatterns": [
     "web/**"
-  ]
+  ],
+  "rules": {
+        "no-console": "off",
+        "jsx-a11y/control-has-associated-label": "off"
+  }
 }
