--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -6,6 +6,7 @@
 
 ; 10 Feb 2024 Masses (tanks/cargo) shift 5m fwd to match visual model
 ; Contact point of wing gear slightgly set higher so it gets less plane weight (shift weight on nose)
+; Main gears contact points pushed a bit aft as a compromise between correct tilt animation and weight distribution
 
 [VERSION]
 major = 1
