fix(flt): Update 380 mass distribution and ground weights (#8479)
* global mass offset of 5 meters

* Changelog update in cfg file

* contact points aft as a compromise with tilt

* Update flight_model.cfg

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -4,6 +4,10 @@
 ; A380 MSN 225 - WV03 A380-842
 ; 07 Mar 2023 Fuel System Update
 
+; 10 Feb 2024 Masses (tanks/cargo) shift 5m fwd to match visual model
+; Contact point of wing gear slightgly set higher so it gets less plane weight (shift weight on nose)
+; Main gears contact points pushed a bit aft as a compromise between correct tilt animation and weight distribution
+
 [VERSION]
 major = 1
 minor = 0
@@ -29,35 +33,35 @@ activate_cg_limit_based_on_mach = 0 ; Activate cg limitation depending on mach v
 max_number_of_stations = 19 ; Number of payload stations - per pax 185 lbs
 ; PAX
 ; MAIN DECK FWD: 88 seats (Max = 16296.5 LBS)
-station_load.0 = 8148.3, 70.7, 0, 7.1, MAIN DECK FWD A, 3; 44 PAX
-station_load.1 = 8148.3, 70.7, 0, 7.1, MAIN DECK FWD B, 3; 44 PAX
+station_load.0 = 8148.3, 75.7, 0, 7.1, MAIN DECK FWD A, 3; 44 PAX
+station_load.1 = 8148.3, 75.7, 0, 7.1, MAIN DECK FWD B, 3; 44 PAX
 ; MAIN DECK MID 1: 135 seats (Max = 25000.4 LBS)
-station_load.2 = 7777.9, 25.6, 0, 7.1, MAIN DECK MID 1A, 3; 42 PAX
-station_load.3 = 9259.4, 25.6, 0, 7.1, MAIN DECK MID 1B, 3; 50 PAX
-station_load.4 = 7963.1, 25.6, 0, 7.1, MAIN DECK MID 1C, 3; 43 PAX
+station_load.2 = 7777.9, 30.6, 0, 7.1, MAIN DECK MID 1A, 3; 42 PAX
+station_load.3 = 9259.4, 30.6, 0, 7.1, MAIN DECK MID 1B, 3; 50 PAX
+station_load.4 = 7963.1, 30.6, 0, 7.1, MAIN DECK MID 1C, 3; 43 PAX
 ; MAIN DECK MID 2: 124 seats (Max = 22963.3 LBS)
-station_load.5 = 8889.0, -16.1, 0, 7.1, MAIN DECK MID 2A, 3; 48 PAX
-station_load.6 = 7407.5, -16.1, 0, 7.1, MAIN DECK MID 2B, 3; 40 PAX
-station_load.7 = 6666.8, -16.1, 0, 7.1, MAIN DECK MID 2C, 3; 36 PAX
+station_load.5 = 8889.0, -11.1, 0, 7.1, MAIN DECK MID 2A, 3; 48 PAX
+station_load.6 = 7407.5, -11.1, 0, 7.1, MAIN DECK MID 2B, 3; 40 PAX
+station_load.7 = 6666.8, -11.1, 0, 7.1, MAIN DECK MID 2C, 3; 36 PAX
 ; MAIN DECK AFT: 82 seats (Max = 15185.4 LBS)
-station_load.8 = 7777.9, -51.9, 0, 7.1, MAIN DECK AFT A, 3; 42 PAX
-station_load.9 = 7407.5, -51.9, 0, 7.1, MAIN DECK AFT B, 3; 40 PAX
+station_load.8 = 7777.9, -46.9, 0, 7.1, MAIN DECK AFT A, 3; 42 PAX
+station_load.9 = 7407.5, -46.9, 0, 7.1, MAIN DECK AFT B, 3; 40 PAX
 ; UPPER DECK FWD: 14 seats (Max = 2592.6 LBS)
-station_load.10 = 2592.6, 55.8, 0, 15.6, UPPER DECK FWD, 3; 14 PAX
+station_load.10 = 2592.6, 60.8, 0, 15.6, UPPER DECK FWD, 3; 14 PAX
 ; UPPER DECK MID: 58 seats (Max = 10740.9 LBS)
-station_load.11 = 5370.5, 6.7, 0, 15.6, UPPER DECK MID A, 3; 29 PAX
-station_load.12 = 5370.5, 6.7, 0, 15.6, UPPER DECK MID B, 3; 29 PAX
+station_load.11 = 5370.5, 11.7, 0, 15.6, UPPER DECK MID A, 3; 29 PAX
+station_load.12 = 5370.5, 11.7, 0, 15.6, UPPER DECK MID B, 3; 29 PAX
 ; UPPER DECK AFT: 18 seats (Max = 3334.1 LBS)
-station_load.13 = 3334.1, -34.3, 0, 15.6, UPPER DECK AFT, 3; 18 PAX
+station_load.13 = 3334.1, -29.3, 0, 15.6, UPPER DECK AFT, 3; 18 PAX
 ; CARGO
-station_load.14 = 63000, 62.4, 0, -0.95, FWD CARGO HOLD, 6; (Max = 63000 LBS)
-station_load.15 = 44775, -23.5, 0, -0.95, AFT CARGO HOLD, 6; (Max = 44775 LBS)
-station_load.16 = 5540, -57.9, 0, -0.71, BULK CARGO, 6; (Max = 5540 LBS)
-station_load.17 = 1, 100.3, -1.95, 7.1, CAPTAIN, 1
-station_load.18 = 1, 100.3, 1.95, 7.1, FIRST OFFICER, 2
+station_load.14 = 63000, 67.4, 0, -0.95, FWD CARGO HOLD, 6; (Max = 63000 LBS)
+station_load.15 = 44775, -18.5, 0, -0.95, AFT CARGO HOLD, 6; (Max = 44775 LBS)
+station_load.16 = 5540, -52.9, 0, -0.71, BULK CARGO, 6; (Max = 5540 LBS)
+station_load.17 = 1, 105.3, -1.95, 7.1, CAPTAIN, 1
+station_load.18 = 1, 105.3, 1.95, 7.1, FIRST OFFICER, 2
 
 [CONTACT_POINTS]
-static_pitch = -0.2 ; degrees, pitch when at rest on the ground (+=Up, -=Dn)
+static_pitch = -0.23 ; degrees, pitch when at rest on the ground (+=Up, -=Dn)
 static_cg_height = 8.89 ; feet, altitude of CG when at rest on the ground
 gear_system_type = 3 ; gear system type (betweeen 0 and 4) 0 = electrical, 1 = hydraulic, 2 = pneumatic, 3 = manual, 4 = none, 5 = undefined
 tailwheel_lock = 0 ; Is tailwheel lock available TRUE/FALSE
@@ -90,10 +94,10 @@ max_castering_angle = 1.309 ; Defines the maximum angle a free castering wheel c
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
 point.0 = 1, 100.0, 0, -15.8, 800, 0, 2.34, 70, 1.8, 1.7, 0.2, 17, 15, 0, 0, 0, 2
-point.1 = 1, -6, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
-point.2 = 1, -6, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.3 = 1, 6, -20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.4 = 1, 6, 20.5, -16.272573, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.1 = 1, -8.5, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
+point.2 = 1, -8.5, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.3 = 1, 3.0, -20.5, -15.8, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.4 = 1, 3.0, 20.5, -15.8, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
@@ -111,17 +115,17 @@ Engine.1 = Name:LeftOuterEngine#Index:1
 Engine.2 = Name:LeftInnerEngine#Index:2
 Engine.3 = Name:RightInnerEngine#Index:3
 Engine.4 = Name:RightOuterEngine#Index:4
-Tank.1 = Name:LeftOuter#Title:TT:MENU.FUEL.LEFT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-30.7,-100.0,8.5#Priority:2#OutputOnlyLines:LeftOuterTankToLeftOuterTankPump,LeftOuterTankToLeftOuterEmerXferValve
-Tank.2 = Name:Feed1#Title:TT:MENU.FUEL.FEED_ONE#Capacity:7299.6#UnusableCapacity:0#Position:-13.2,-71.0,7.3#Priority:5#InputOnlyLines:FeedTank1FwdXferValve1ToFeedTank1,FeedTank1FwdXferValve2ToFeedTank1,FeedTank1AftXferValve2ToFeedTank1#OutputOnlyLines:FeedTank1ToFeed1TankPump1,FeedTank1ToFeed1TankPump2
-Tank.3 = Name:LeftMid#Title:TT:MENU.FUEL.LEFT_MID#Capacity:9632#UnusableCapacity:0#Position:1.3,-46.4,5.9#Priority:3#OutputOnlyLines:LeftMidTankToLeftMidTankPumpFwd,LeftMidTankToLeftMidTankPumpAft
-Tank.4 = Name:LeftInner#Title:TT:MENU.FUEL.LEFT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:10.8,-24.7,3.2#Priority:4#OutputOnlyLines:LeftInnerTankToLeftInnerTankPumpFwd,LeftInnerTankToLeftInnerTankPumpAft
-Tank.5 = Name:Feed2#Title:TT:MENU.FUEL.FEED_TWO#Capacity:7753.2.#UnusableCapacity:0#Position:21.6,-18.4,1.0#Priority:5#InputOnlyLines:FeedTank2FwdXferValve1_1ToFeedTank2,FeedTank2FwdXferValve1_2ToFeedTank2,FeedTank2FwdXferValve2_1ToFeedTank2,FeedTank2FwdXferValve2_2ToFeedTank2,FeedTank2AftXferValve2ToFeedTank2#OutputOnlyLines:FeedTank2ToFeed2TankPump1,FeedTank2ToFeed2TankPump2
-Tank.6 = Name:Feed3#Title:TT:MENU.FUEL.FEED_THREE#Capacity:7753.2#UnusableCapacity:0#Position:21.6,18.4,1.0#Priority:5#InputOnlyLines:FeedTank3FwdXferValve1_1ToFeedTank3,FeedTank3FwdXferValve1_2ToFeedTank3,FeedTank3FwdXferValve2_1ToFeedTank3,FeedTank3FwdXferValve2_2ToFeedTank3,FeedTank3AftXferValve2ToFeedTank3#OutputOnlyLines:FeedTank3ToFeed3TankPump1,FeedTank3ToFeed3TankPump2
-Tank.7 = Name:RightInner#Title:TT:MENU.FUEL.RIGHT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:10.8,24.7,3.2#Priority:4#OutputOnlyLines:RightInnerTankToRightInnerTankPumpFwd,RightInnerTankToRightInnerTankPumpAft
-Tank.8 = Name:RightMid#Title:TT:MENU.FUEL.RIGHT_MID#Capacity:9632#UnusableCapacity:0#Position:1.3,46.4,5.9#Priority:3#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
-Tank.9 = Name:Feed4#Title:TT:MENU.FUEL.FEED_FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-13.2,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
-Tank.10 = Name:RightOuter#Title:TT:MENU.FUEL.RIGHT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-30.7,100,8.5#Priority:2#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
-Tank.11 = Name:Trim#Title:TT:MENU.FUEL.TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-92.9,0,12.1#Priority:1#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
+Tank.1 = Name:LeftOuter#Title:TT:MENU.FUEL.LEFT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.7,-100.0,8.5#Priority:2#OutputOnlyLines:LeftOuterTankToLeftOuterTankPump,LeftOuterTankToLeftOuterEmerXferValve
+Tank.2 = Name:Feed1#Title:TT:MENU.FUEL.FEED_ONE#Capacity:7299.6#UnusableCapacity:0#Position:-8.2,-71.0,7.3#Priority:5#InputOnlyLines:FeedTank1FwdXferValve1ToFeedTank1,FeedTank1FwdXferValve2ToFeedTank1,FeedTank1AftXferValve2ToFeedTank1#OutputOnlyLines:FeedTank1ToFeed1TankPump1,FeedTank1ToFeed1TankPump2
+Tank.3 = Name:LeftMid#Title:TT:MENU.FUEL.LEFT_MID#Capacity:9632#UnusableCapacity:0#Position:6.3,-46.4,5.9#Priority:3#OutputOnlyLines:LeftMidTankToLeftMidTankPumpFwd,LeftMidTankToLeftMidTankPumpAft
+Tank.4 = Name:LeftInner#Title:TT:MENU.FUEL.LEFT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:15.8,-24.7,3.2#Priority:4#OutputOnlyLines:LeftInnerTankToLeftInnerTankPumpFwd,LeftInnerTankToLeftInnerTankPumpAft
+Tank.5 = Name:Feed2#Title:TT:MENU.FUEL.FEED_TWO#Capacity:7753.2.#UnusableCapacity:0#Position:26.6,-18.4,1.0#Priority:5#InputOnlyLines:FeedTank2FwdXferValve1_1ToFeedTank2,FeedTank2FwdXferValve1_2ToFeedTank2,FeedTank2FwdXferValve2_1ToFeedTank2,FeedTank2FwdXferValve2_2ToFeedTank2,FeedTank2AftXferValve2ToFeedTank2#OutputOnlyLines:FeedTank2ToFeed2TankPump1,FeedTank2ToFeed2TankPump2
+Tank.6 = Name:Feed3#Title:TT:MENU.FUEL.FEED_THREE#Capacity:7753.2#UnusableCapacity:0#Position:26.6,18.4,1.0#Priority:5#InputOnlyLines:FeedTank3FwdXferValve1_1ToFeedTank3,FeedTank3FwdXferValve1_2ToFeedTank3,FeedTank3FwdXferValve2_1ToFeedTank3,FeedTank3FwdXferValve2_2ToFeedTank3,FeedTank3AftXferValve2ToFeedTank3#OutputOnlyLines:FeedTank3ToFeed3TankPump1,FeedTank3ToFeed3TankPump2
+Tank.7 = Name:RightInner#Title:TT:MENU.FUEL.RIGHT_INNER#Capacity:12189.4#UnusableCapacity:0#Position:15.8,24.7,3.2#Priority:4#OutputOnlyLines:RightInnerTankToRightInnerTankPumpFwd,RightInnerTankToRightInnerTankPumpAft
+Tank.8 = Name:RightMid#Title:TT:MENU.FUEL.RIGHT_MID#Capacity:9632#UnusableCapacity:0#Position:6.3,46.4,5.9#Priority:3#OutputOnlyLines:RightMidTankToRightMidTankPumpFwd,RightMidTankToRightMidTankPumpAft
+Tank.9 = Name:Feed4#Title:TT:MENU.FUEL.FEED_FOUR#Capacity:7299.6#UnusableCapacity:0#Position:-8.2,71,7.3#Priority:5#InputOnlyLines:FeedTank4FwdXferValve1ToFeedTank4,FeedTank4FwdXferValve2ToFeedTank4,FeedTank4AftXferValve2ToFeedTank4#OutputOnlyLines:FeedTank4ToFeed4TankPump1,FeedTank4ToFeed4TankPump2
+Tank.10 = Name:RightOuter#Title:TT:MENU.FUEL.RIGHT_OUTER#Capacity:2731.5#UnusableCapacity:0#Position:-25.7,100,8.5#Priority:2#OutputOnlyLines:RightOuterTankToRightOuterTankPump,RightOuterTankToRightOuterEmerXferValve
+Tank.11 = Name:Trim#Title:TT:MENU.FUEL.TRIM#Capacity:6260.3#UnusableCapacity:0#Position:-87.9,0,12.1#Priority:1#OutputOnlyLines:TrimTankToTrimTankPumpLeft,TrimTankToTrimTankPumpRight
 Line.1 = Name:FeedTank1ToFeed1TankPump1#Source:Feed1#Destination:Feed1TankPump1
 Line.2 = Name:FeedTank1ToFeed1TankPump2#Source:Feed1#Destination:Feed1TankPump2
 Line.3 = Name:FeedTank2ToFeed2TankPump1#Source:Feed2#Destination:Feed2TankPump1
