--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -2,11 +2,14 @@
 ; SPDX-License-Identifier: GPL-3.0
 
 ; A380 MSN 225 - WV03 A380-842
-; 07 Mar 2023 Fuel System Update
+; 07 Mar 2023 - Fuel System Update
 
-; 10 Feb 2024 Masses (tanks/cargo) shift 5m fwd to match visual model
+; 10 Feb 2024 - Masses (tanks/cargo) shift 5m fwd to match visual model
 ; Contact point of wing gear slightgly set higher so it gets less plane weight (shift weight on nose)
 ; Main gears contact points pushed a bit aft as a compromise between correct tilt animation and weight distribution
+
+; 14 Feb 2024 - Moved CG while keeping correct %Mac offset by moving aero center forward
+; Changed contact points and empty mass to match real MSN empty weight load sheet
 
 [VERSION]
 major = 1
@@ -19,9 +22,9 @@ minor = 0
 ; Maximum Landing Weight (MLW) 395,000 kg, 870,826 lb
 ; Maximum Zero Fuel Weight (MZFW) 373,000 kg, 822,324 lb (360,000 kg/793,663 lb at fwd CG)
 max_gross_weight = 1124355 ; Max takeoff weight, (LBS)
-empty_weight = 661401 ; Empty weight, (LBS)
+empty_weight = 629023; Empty weight, (LBS)
 reference_datum_position = 0, 0, 0 ; Position of reference datum relative to FS(0,0,0) (FEET), z, x, y
-empty_weight_CG_position = 0.83, 0, 2.8 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y Should give empty weight cg of 36.2%RC 0.7
+empty_weight_CG_position = 5.52, 0, 2.8 ; Position of airplane empty weight CG relative to reference datum (FEET), z, x, y Should give empty weight cg of 36.2%RC
 CG_forward_limit = 0.28 ; Gravity center forward limit (longitudinal offset) for longitudinal stability
 CG_aft_limit = 0.44 ; Gravity center after limit (longitudinal offset z) w.r.t reference datum for longitudinal stability (FEET)
 empty_weight_pitch_MOI = 79112140 ; Empty pitch moment of inertia, Jxx (SLUG SQ FEET)
@@ -94,10 +97,10 @@ max_castering_angle = 1.309 ; Defines the maximum angle a free castering wheel c
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
 point.0 = 1, 100.0, 0, -15.8, 800, 0, 2.34, 70, 1.8, 1.7, 0.2, 17, 15, 0, 0, 0, 2
-point.1 = 1, -8.5, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
-point.2 = 1, -8.5, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.3 = 1, 3.0, -20.5, -15.8, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.4 = 1, 3.0, 20.5, -15.8, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.1 = 1, -6, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
+point.2 = 1, -6, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.3 = 1, 3.84, -20.5, -16, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.4 = 1, 3.84, 20.5, -16, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
@@ -416,7 +419,7 @@ wing_incidence = 2 ; Wing incidence (DEGREES) (unknown)
 wing_twist = -5.5 ; Wing twist epsilon (DEGREES)
 oswald_efficiency_factor = 0.70 ; Wing Oswald efficiency factor e (non dimensional)
 wing_winglets_flag = 0 ; Has winglets true/false (MSFS doesn't use this parameter)
-wing_sweep = 35 ; Wing sweep (DEGREES)
+wing_sweep = 37 ; Wing sweep (DEGREES)
 ;wing_pos_apex_lon = 0 ; Longitudinal (z) position of wing apex w.r.t reference datum (FEET) (not used)
 wing_pos_apex_vert = -2 ; Vertical (y) position of wing apex w.r.t reference datum (FEET) (estimated from mesh drawing)
 htail_area = 2300 ; Horizontal tail area (SQUARE FEET) original 1603
@@ -515,7 +518,7 @@ yaw_moment_delta_rudder = 0.753 ; (control)The change in yaw moment per change i
 yaw_moment_delta_rudder_propwash = 0.753 ; (control)
 yaw_moment_delta_rudder_trim_scalar = 0.753 ; Change in yaw moment due to rudder trim
 compute_aero_center = 0
-aero_center_lift = 5.3 ; Init to center
+aero_center_lift = 10 ; Init to center
 lift_coef_aoa_table = -3.15:0, 0:0.138, 0.139:1.32, 0.2:1.48, 0.26:1.76, 0.29:1.750, 0.32:1.60, 0.5:1.50, 3.15:0
 lift_coef_ground_effect_mach_table = 0.1171:0.7211,0.1411:0.7111,0.1761:0.6811,0.2171:0.6631,0.3171:0.647135503,0.4171:0.637668047,0.5171:0.63293432,0.6171:0.628200592,0.7171:0.625833728,0.8171:0.623466864,1:1 ; changed from 0.0:1.178, 0.15:1.178, 0.19:1.178, 0.20:1.176, 0.22:1.173, 0.25:1.17, 0.27:1.1675, 0.30:1.164, 0.35:1.159, 1.0:1
 lift_coef_mach_table = 0:1
