--- a/fbw-a380x/src/systems/instruments/tsconfig.json
+++ b/fbw-a380x/src/systems/instruments/tsconfig.json
@@ -1,16 +1,3 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "downlevelIteration": true,
-    "module": "esnext",
-    "esModuleInterop": true,
-    "jsx": "react",
-    "moduleResolution": "node",
-    "skipLibCheck": true,
-    "strictNullChecks": true,
-  },
-  "include": [
-    "src/**/*",
-    "../../typings/**/*.d.ts"
-  ]
+  "extends": "../tsconfig.json"
 }
