Moved A320 CLock to common and added separate clock instance for A380X

--- a/fbw-a380x/src/systems/tsconfig.json
+++ b/fbw-a380x/src/systems/tsconfig.json
@@ -18,7 +18,8 @@
         "@flybywiresim/failures": ["failures"],
         "@tcas/*": ["./tcas/src/*"],
         "@typings/*": ["../typings"],
-        "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"]
+        "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"],
+        "@flybywiresim/clock": ["../../../fbw-common/src/systems/instruments/src/Clock/index.ts"]
       }
     }
 }
