--- a/fbw-a32nx/src/systems/instruments/src/Clock/tsconfig.json
+++ b/fbw-a32nx/src/systems/instruments/src/Clock/tsconfig.json
@@ -11,23 +11,6 @@
       "moduleResolution": "node" /* Enables compatibility with MSFS SDK bare global imports */,
       "jsxFactory": "FSComponent.buildComponent" /* Required for FSComponent framework JSX */,
       "jsxFragmentFactory": "FSComponent.Fragment" /* Required for FSComponent framework JSX */,
-      "jsx": "react", /* Required for FSComponent framework JSX */
-      "paths": {
-        "@datalink/aoc": ["../../../fbw-common/src/systems/datalink/aoc/src/index.ts"],
-        "@datalink/atc": ["../../../fbw-common/src/systems/datalink/atc/src/index.ts"],
-        "@datalink/common": ["../../../fbw-common/src/systems/datalink/common/src/index.ts"],
-        "@datalink/router": ["../../../fbw-common/src/systems/datalink/router/src/index.ts"],
-        "@failures": ["./failures/src/index.ts"],
-        "@fmgc/*": ["./fmgc/src/*"],
-        "@instruments/common/*": ["./instruments/src/Common/*"],
-        "@localization/*": ["../localization/*"],
-        "@sentry/*": ["./sentry-client/src/*"],
-        "@simbridge/*": ["./simbridge-client/src/*"],
-        "@shared/*": ["./shared/src/*"],
-        "@tcas/*": ["./tcas/src/*"],
-        "@typings/*": ["../../../fbw-common/src/typings/*"],
-        "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"],
-        "@flybywiresim/navigation-display": ["../../../fbw-common/src/systems/instruments/src/ND/index.ts"]
-      }
+      "jsx": "react" /* Required for FSComponent framework JSX */
     }
   }
