--- a/fbw-a380x/src/systems/tsconfig.json
+++ b/fbw-a380x/src/systems/tsconfig.json
@@ -19,7 +19,7 @@
         "@tcas/*": ["./tcas/src/*"],
         "@typings/*": ["../typings"],
         "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index.ts"],
-        "@flybywiresim/clock": ["../../../fbw-common/src/systems/instruments/src/Clock/index.ts"]
+        "@flybywiresim/clock": ["../../../fbw-common/src/systems/instruments/src/Clock/index.ts"],
         "@flybywiresim/bat": ["../../../fbw-common/src/systems/instruments/src/BAT/index.ts"]
       }
     }
