Update struts springs wingflex fix

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -11,6 +11,8 @@
 ; 14 Feb 2024 - Moved CG while keeping correct %Mac offset by moving aero center forward
 ; Changed contact points and empty mass to match real MSN empty weight load sheet
 
+; 15 Feb 2024 - Activate new spring method and update strut springs
+
 [VERSION]
 major = 1
 minor = 0
@@ -68,7 +70,7 @@ static_pitch = -0.23 ; degrees, pitch when at rest on the ground (+=Up, -=Dn)
 static_cg_height = 8.89 ; feet, altitude of CG when at rest on the ground
 gear_system_type = 3 ; gear system type (betweeen 0 and 4) 0 = electrical, 1 = hydraulic, 2 = pneumatic, 3 = manual, 4 = none, 5 = undefined
 tailwheel_lock = 0 ; Is tailwheel lock available TRUE/FALSE
-max_number_of_points = 9 ; Number of contact points
+max_number_of_points = 11 ; Number of contact points
 gear_locked_on_ground = 0 ; Defines whether or not the landing gear handle is locked to down when the plane is on the ground.
 gear_locked_above_speed = -1 ; Defines the speed at which the landing gear handle becomes locked in the up position. (-1 = Disabled)==> Disabled is kept in favor of an XML-based solution
 max_speed_full_steering = 300 ; Defines the speed under which the full angle of steering is available (in feet/second).==> 20 kts or 33.7 ft/sec (was 8)
@@ -78,6 +80,8 @@ max_speed_full_steering_castering = 300 ; Defines the speed under which the full
 max_speed_decreasing_steering_castering = 350 ; Defines the speed above which the angle of steering stops decreasing for free castering wheels  (in feet/second).
 min_castering_angle = 0.05236 ; Defines the minimum angle a free castering wheel can take (in radians).
 max_castering_angle = 1.309 ; Defines the maximum angle a free castering wheel can take (in radians).
+spring_exponential_fix = 1; Activates MSFS new spring formula
+
 ;CONTACT POINT DEFINITION
 ;0 Type of contact point - 1 = wheel, 2 = scrape point, 3 = skid, 4 = float, 5 = water rudder, 16 = ski, 17 = propeller
 ;1 Longitudinal position z relative to Datum Reference Point, in ft.
@@ -96,11 +100,11 @@ max_castering_angle = 1.309 ; Defines the maximum angle a free castering wheel c
 ;14 The airspeed limit for gears retraction, in kias.
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
-point.0 = 1, 100.0, 0, -15.8, 800, 0, 2.34, 70, 1.8, 1.7, 0.2, 17, 15, 0, 0, 0, 2
-point.1 = 1, -6, -8.5, -16.272573, 1200, 1, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 2, 0, 0, 2
-point.2 = 1, -6, 8.5, -16.272573, 1200, 2, 2, 8, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.3 = 1, 3.84, -20.5, -16, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
-point.4 = 1, 3.84, 20.5, -16, 1200, 2, 2, 0, 1.71, 2.1, 0.5, 21.1, 19.9, 3, 0, 0, 2
+point.0 = 1, 100.0, 0, -15.45, 800, 0, 2.34, 70, 0.545, 2.857, 0.2, 17, 15, 0, 0, 0, 1.2
+point.1 = 1, -6, -8.5, -15.5, 1200, 1, 2.34, 8, 0.603, 2.857, 0.35, 21.1, 19.9, 2, 0, 0, 1.2
+point.2 = 1, -6, 8.5, -15.5, 1200, 2, 2.34, 8, 0.603, 2.857, 0.35, 21.1, 19.9, 3, 0, 0, 1.2
+point.3 = 1, 3.84, -20.5, -15.4, 1200, 1, 2.34, 0, 0.74, 2.22, 0.35, 21.1, 19.9, 3, 0, 0, 1.2
+point.4 = 1, 3.84, 20.5, -15.4, 1200, 2, 2.34, 0, 0.74, 2.22, 0.35, 21.1, 19.9, 3, 0, 0, 1.2
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
