--- a/fbw-common/src/systems/instruments/src/OANC/tsconfig.json
+++ b/fbw-common/src/systems/instruments/src/OANC/tsconfig.json
@@ -18,7 +18,7 @@
       "@datalink/common": ["../../../fbw-common/src/systems/datalink/common/src/index.ts"],
       "@datalink/router": ["../../../fbw-common/src/systems/datalink/router/src/index.ts"],
       "@failures": ["./failures/src/index.ts"],
-      "@fmgc/*": ["./fmgc/src/*"],
+      "@fmgc/*": ["../../../fbw-a32nx/src/systems/fmgc/src/*"],
       "@instruments/common/*": ["./instruments/src/Common/*"],
       "@localization/*": ["../localization/*"],
       "@sentry/*": ["./sentry-client/src/*"],
@@ -26,8 +26,7 @@
       "@shared/*": ["./shared/src/*"],
       "@tcas/*": ["./tcas/src/*"],
       "@typings/*": ["../../../fbw-common/src/typings/*"],
-      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"],
-      "@flybywiresim/oanc": ["../../../fbw-common/src/systems/instruments/src/OANC/index.ts"]
+      "@flybywiresim/fbw-sdk": ["../../../fbw-common/src/systems/index-no-react.ts"]
     }
   }
 }
