--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/flight_model.cfg
@@ -100,11 +100,11 @@ spring_exponential_fix = 1; Activates MSFS new spring formula
 ;14 The airspeed limit for gears retraction, in kias.
 ;15 Airspeed above which gear is damaged, in kias.
 ;16 The exponential constant for springs
-point.0 = 1, 100.0, 0, -15.45, 800, 0, 2.34, 70, 0.545, 2.857, 0.2, 17, 15, 0, 0, 0, 1.2
-point.1 = 1, -6, -8.5, -15.5, 1200, 1, 2.34, 8, 0.603, 2.857, 0.35, 21.1, 19.9, 2, 0, 0, 1.2
-point.2 = 1, -6, 8.5, -15.5, 1200, 2, 2.34, 8, 0.603, 2.857, 0.35, 21.1, 19.9, 3, 0, 0, 1.2
-point.3 = 1, 3.84, -20.5, -15.4, 1200, 1, 2.34, 0, 0.74, 2.22, 0.35, 21.1, 19.9, 3, 0, 0, 1.2
-point.4 = 1, 3.84, 20.5, -15.4, 1200, 2, 2.34, 0, 0.74, 2.22, 0.35, 21.1, 19.9, 3, 0, 0, 1.2
+point.0 = 1, 100.0, 0, -15.15, 800, 0, 2.239, 70, 1.2947673642672, 1.20481927710843, 0.5, 17, 15, 0, 0, 0, 4
+point.1 = 1, -6, -8.5, -15.5, 1200, 1, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
+point.2 = 1, -6, 8.5, -15.5, 1200, 2, 2.356, 8, 1.3790921701152, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
+point.3 = 1, 3.84, -20.5, -15.3, 1200, 1, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 2, 0, 0, 4
+point.4 = 1, 3.84, 20.5, -15.3, 1200, 2, 2.356, 0, 1.3146370499424, 1.25, 0.5, 21.1, 19.9, 3, 0, 0, 4
 point.5 = 2, -26, -60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 5, 0, 0, 1
 point.6 = 2, -26, 60, 6, 100, 0, 0, 0, 0, 0, 0, 0, 0, 6, 0, 0, 1
 point.7 = 2, -79.2, 0, 8, 100, 0, 0, 0, 0, 0, 0, 0, 0, 9, 0, 0, 1
