add OANS to A380X ND

--- a/fbw-a380x/src/systems/instruments/src/ND/config.json
+++ b/fbw-a380x/src/systems/instruments/src/ND/config.json
@@ -1,6 +1,6 @@
 {
   "index": "./instrument.tsx",
-  "isInteractive": false,
+  "isInteractive": true,
   "extraDeps": [
     "fbw-common/src/systems/instruments/src/ND"
   ]
