fixed wrong comment marker in panel.cfg

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -1,7 +1,7 @@
 ; Copyright (c) 2023-2024 FlyByWire Simulations
 ; SPDX-License-Identifier: GPL-3.0
 
-// Panel Configuration File
+# Panel Configuration File
 
 [Default View]
 X=0
@@ -72,7 +72,6 @@ pixel_size=768,1024
 texture=$SCREEN_DU_NDR
 
 htmlgauge00=A380X/ND/nd.html?Index=2?duID=4, 0,0,768,1024
-
 
 [VCockpit09]
 size_mm=5120,5120
