add extra-host module for airframe check, remove airframe check from efb

--- a/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
+++ b/fbw-a32nx/src/base/flybywire-aircraft-a320-neo/SimObjects/AirPlanes/FlyByWire_A320_NEO/panel/panel.cfg
@@ -122,7 +122,7 @@ size_mm = 1430,1000
 pixel_size = 1430,1000
 texture = $EFB
 
-htmlgauge00 = A32NX/EFB/efb.html?Airframe=A320_251N, 0,0,1430,1000
+htmlgauge00 = A32NX/EFB/efb.html, 0,0,1430,1000
 
 [VCockpit17]
 size_mm = 0,0
@@ -149,7 +149,7 @@ pixel_size = 0,0
 texture = NO_TEXTURE
 background_color = 0,0,0
 
-htmlgauge00 = A32NX/ExtrasHost/extras-host.html,0,0,1,1
+htmlgauge00 = A32NX/ExtrasHost/extras-host.html?Airframe=A320_251N,0,0,1,1
 
 [VPainting01]
 size_mm = 2048,512
