feat: add isis/snd dummy

--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -91,9 +91,9 @@ htmlgauge00=A32NX/ISIS/isis.html, 0,0,512,512
 [VCockpit11]
 size_mm=512,512
 pixel_size=512,512
-texture=$ATTITUDEDISPLAY
+texture=NO_TEXTURE
 
-htmlgauge00=A32NX/ISIS/isis.html, 0,0,512,512
+htmlgauge00=A380X/SND/snd.html, 0,0,512,512
 
 [VCockpit12]
 size_mm=256,256
