--- a/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
+++ b/fbw-a380x/src/base/flybywire-aircraft-a380-842/SimObjects/AirPlanes/FlyByWire_A380_842/panel/panel.cfg
@@ -1,7 +1,7 @@
 ; Copyright (c) 2023-2024 FlyByWire Simulations
 ; SPDX-License-Identifier: GPL-3.0
 
-# Panel Configuration File
+; Panel Configuration File
 
 [Default View]
 X=0
@@ -21,15 +21,15 @@ texture=$SCREEN_DU_MFD
 
 htmlgauge00=A380X/MFD/mfd.html?duID=2, 0,0,1536,1024
 
-# To enable both MFD screens without fms-v2 rpc sync, we map one texture across both screens,
-# and render both MFD screens within one texture/instrument
+; To enable both MFD screens without fms-v2 rpc sync, we map one texture across both screens,
+; and render both MFD screens within one texture/instrument
 
 [VCockpit02]
 size_mm=768,1024
 pixel_size=768,1024
 texture=$SCREEN_DU_MFDR
 
-# No separate MFDR, see above
+; No separate MFDR, see above
 
 [VCockpit03]
 size_mm=768,1024
